style: ensure dynamic Presentation component is responsive on smaller screens

--- a/src/components/dynamic-components/folders-content/presentation.module.css
+++ b/src/components/dynamic-components/folders-content/presentation.module.css
@@ -1,17 +1,19 @@
 .container {
   display: flex;
   height: 100%;
+  padding: 2rem;
   align-items: center;
   justify-content: center;
 }
 .content-box {
   display: flex;
   width: 80%;
+  height: fit-content;
   border: 2px solid #2d2d2d;
   border-radius: 5px;
+  padding: 1rem;
   background-color: #252526;
   transform: translate(0, -50px, 0);
-  padding: 2rem;
   overflow: hidden;
   animation: show-container 1s forwards;
 }
@@ -21,6 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  line-height: 125%;
   gap: 1.5rem;
   font-size: 1.2rem;
 }
@@ -100,29 +103,29 @@
 
 @media (max-width: 950px) {
   .container .content-box {
-    width: 90%;
+    width: 100%;
     flex-direction: column;
     align-items: center;
+    text-align: justify;
+    height: 100%;
     padding: 1rem;
   }
   .container .animation {
+    position: relative;
     overflow: hidden;
-    width: 50%;
+    width: 100%;
     height: 50%;
   }
   .container .animation div {
-    transform: initial;
+    width: 100%;
+    height: 100%;
   }
   .content {
     width: 100%;
   }
 }
 
-@media (max-width: 800px) {
-  .container .animation div {
-    transform: initial;
-  }
-}
+
 
 @media (max-width: 550px) {
   .content .social {
@@ -136,6 +139,17 @@
     padding: 0.2rem;
   }
 }
+
+@media (max-width: 470px) {
+  .content .about {
+    gap: 0.7rem;
+  }
+  .content {
+    gap: 0.7rem;
+    font-size: 0.9rem;
+  }
+}
+
 
 @keyframes show-container {
   to {
